@@ -548,6 +548,7 @@ static int8_t d64_readdir(dh_t *dh, struct cbmdirent *dent) {
   memcpy(dent->name, entrybuf+OFS_FILE_NAME, CBM_NAME_LENGTH);
   strnsubst(dent->name, 16, 0xa0, 0);
   dent->name[16] = 0;
+  dent->realname[0] = 0;
 
   return 0;
 }
