@@ -3,6 +3,7 @@
         - Match trailing part of names after * too
         - Multi-drive/partition support
         - Rename
+        - transparent support for P/S/U/R00 files
 
 2008-02-24 - release 0.6.2
         - Bugfix: Read the correct pins when determining the device
